--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,8 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:2.3.3',
+        compile 'com.github.ar-android:DrawRouteMaps:1.0.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -15,7 +16,8 @@ buildscript {
 allprojects {
     repositories {
         maven {
-            url 'https://maven.google.com'
+            url 'https://maven.google.com',
+            url 'https://jipack.io'
         }
         jcenter()
     }
