--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3',
-        compile 'com.github.ar-android:DrawRouteMaps:1.0.0'
+        classpath 'com.android.tools.build:gradle:2.3.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,8 +15,10 @@ buildscript {
 allprojects {
     repositories {
         maven {
-            url 'https://maven.google.com',
-            url 'https://jipack.io'
+            url 'https://maven.google.com'
+        }
+        maven {
+            url 'https://jitpack.io'
         }
         jcenter()
     }
