--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,9 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         resValue "string", "google_maps_key", (project.findProperty("GOOGLE_MAPS_API_KEY") ?: "")
     }
+    defaultConfig {
+                multiDexEnabled true  // this line will solve this problem
+    }
     buildTypes {
         debug {
             debuggable true
