--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,15 +21,6 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyA3oElXaYBdF4HD4E0MvCPj2BLu9PKsoEk" />
 
-        <activity
-            android:name=".MainActivity"
-            android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
 
         <activity
             android:name=".MapsActivityCurrentPlace"
@@ -51,6 +42,15 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".MapPanorama"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
 
     </application>
